--- a/web/sass/modules/_header.scss
+++ b/web/sass/modules/_header.scss
@@ -320,6 +320,10 @@ $header--sub-text:      #222;
     }
   }
 
+  &--nav-menu-logged-in-user {
+    color: $gray;
+  }
+
 
   /* Header submenu section
  ========================================================================== */
