--- a/web/sass/modules/_nav.scss
+++ b/web/sass/modules/_nav.scss
@@ -72,6 +72,11 @@
     font-size: 1.5em;
   }
 
+  &--text-item {
+    display: block;
+
+    font-size: 2em;
+  }
 
   &--toggle-icon {
     cursor: pointer;
