Issue #SALG-92 by tuj: Added widgets for wayfinding template

--- a/src/Indholdskanalen/MainBundle/Resources/views/Main/index.html.twig
+++ b/src/Indholdskanalen/MainBundle/Resources/views/Main/index.html.twig
@@ -136,6 +136,8 @@
     <script src="{{ asset('app/shared/widgets/sharedChannelPickerWidget/sharedChannelPickerWidget.js?' ~ version) }}"></script>
     <script src="{{ asset('app/shared/widgets/channelRemoverWidget/channelRemoverWidget.js?' ~ version) }}"></script>
     <script src="{{ asset('app/shared/widgets/regionPreviewWidget/regionPreviewWidget.js?' ~ version) }}"></script>
+    <script src="{{ asset('app/shared/widgets/iconPickerWidget/iconPickerWidget.js?' ~ version) }}"></script>
+    <script src="{{ asset('app/shared/widgets/checkboxWidget/checkboxWidget.js?' ~ version) }}"></script>
 
     <!-- Components -->
     <script src="{{ asset('app/shared/components/date/dateComponent.js?' ~ version) }}"></script>
