--- a/web/templates/dokk1/screens/wayfinding-five-rows/wayfinding-five-rows-edit.html
+++ b/web/templates/dokk1/screens/wayfinding-five-rows/wayfinding-five-rows-edit.html
@@ -2,7 +2,7 @@
   <div class="presentation" style="height: 100%;">
     <div class="presentation--inner" style="height: 100%;">
       <div class="presentation--region-horizontal" style="width: 100%; height: 8.33%;">
-        <div class="presentation--region-content" data-ng-class="{'is-active': region === 1}" data-ng-click="triggerTool({name: 'channel-picker-tool', region: 1})">
+        <div class="presentation--region-content" data-ng-class="{'is-active': region === 1}" data-ng-click="triggerTool({name: 'wayfinding-tool', region: 1})">
           <region-preview-widget region="1" screen="screen" class="presentation--region-content-inner"></region-preview-widget>
         </div>
       </div>
