--- a/web/templates/dokk1/screens/tools/wayfinding-tool.html
+++ b/web/templates/dokk1/screens/tools/wayfinding-tool.html
@@ -11,23 +11,23 @@
     <form class="cpw--wrapper">
       <div class="cpw--text">
         <label class="cpw--text-label">Tekst</label>
-        <text-widget field="data.options.text"
+        <text-widget field="data.options.regions[region]['text']"
                      placeholder-text="F.eks. Caféen"></text-widget>
       </div>
 
       <div class="cpw--text">
         <label class="cpw--text-label">Pil</label>
-        <icon-picker-widget field="data.options.arrow" icons="data.template.options.arrows"></icon-picker-widget>
+        <icon-picker-widget field="data.options.regions[region]['arrow']" icons="data.template.options.arrows"></icon-picker-widget>
       </div>
 
       <div class="cpw--textarea">
         <label class="cpw--textarea-label">Underpunkt</label>
-        <checkbox-widget field="data.options.subitem" text="Ikon"></checkbox-widget>
+        <checkbox-widget field="data.options.regions[region]['subitem']" text="Underpunkt"></checkbox-widget>
       </div>
 
       <div class="cpw--textarea">
         <label class="cpw--textarea-label">Ikon</label>
-        <icon-picker-widget field="data.options.icon" icons="data.template.options.icons"></icon-picker-widget>
+        <icon-picker-widget field="data.options.regions[region]['icon']" icons="data.template.options.icons"></icon-picker-widget>
       </div>
     </form>
   </div>
