--- a/web/templates/dokk1/screens/wayfinding-five-rows/wayfinding-five-rows-edit.html
+++ b/web/templates/dokk1/screens/wayfinding-five-rows/wayfinding-five-rows-edit.html
@@ -2,28 +2,28 @@
   <div class="presentation" style="height: 100%;">
     <div class="presentation--inner" style="height: 100%;">
       <div class="presentation--region-horizontal" style="width: 100%; height: 8.33%;">
+        <div class="presentation--region-content" data-ng-class="{'is-active': region === 0}" data-ng-click="triggerTool({name: 'wayfinding-tool', region: 0})">
+          <region-preview-widget region="0" screen="screen" class="presentation--region-content-inner"></region-preview-widget>
+        </div>
+      </div>
+      <div class="presentation--region-horizontal" style="width: 100%; height: 8.33%;">
         <div class="presentation--region-content" data-ng-class="{'is-active': region === 1}" data-ng-click="triggerTool({name: 'wayfinding-tool', region: 1})">
           <region-preview-widget region="1" screen="screen" class="presentation--region-content-inner"></region-preview-widget>
         </div>
       </div>
       <div class="presentation--region-horizontal" style="width: 100%; height: 8.33%;">
-        <div class="presentation--region-content" data-ng-class="{'is-active': region === 2}" data-ng-click="triggerTool({name: 'channel-picker-tool', region: 2})">
+        <div class="presentation--region-content" data-ng-class="{'is-active': region === 2}" data-ng-click="triggerTool({name: 'wayfinding-tool', region: 2})">
           <region-preview-widget region="2" screen="screen" class="presentation--region-content-inner"></region-preview-widget>
         </div>
       </div>
       <div class="presentation--region-horizontal" style="width: 100%; height: 8.33%;">
-        <div class="presentation--region-content" data-ng-class="{'is-active': region === 3}" data-ng-click="triggerTool({name: 'channel-picker-tool', region: 3})">
+        <div class="presentation--region-content" data-ng-class="{'is-active': region === 3}" data-ng-click="triggerTool({name: 'wayfinding-tool', region: 3})">
           <region-preview-widget region="3" screen="screen" class="presentation--region-content-inner"></region-preview-widget>
         </div>
       </div>
       <div class="presentation--region-horizontal" style="width: 100%; height: 8.33%;">
-        <div class="presentation--region-content" data-ng-class="{'is-active': region === 4}" data-ng-click="triggerTool({name: 'channel-picker-tool', region: 4})">
+        <div class="presentation--region-content" data-ng-class="{'is-active': region === 4}" data-ng-click="triggerTool({name: 'wayfinding-tool', region: 4})">
           <region-preview-widget region="4" screen="screen" class="presentation--region-content-inner"></region-preview-widget>
-        </div>
-      </div>
-      <div class="presentation--region-horizontal" style="width: 100%; height: 8.33%;">
-        <div class="presentation--region-content" data-ng-class="{'is-active': region === 5}" data-ng-click="triggerTool({name: 'channel-picker-tool', region: 5})">
-          <region-preview-widget region="5" screen="screen" class="presentation--region-content-inner"></region-preview-widget>
         </div>
       </div>
       <div class="presentation--region-horizontal" style="width: 100%; height: 58.35%;">
