Issue #SALG-92 by tuj: Added black background and more regions

--- a/web/templates/dokk1/screens/wayfinding-five-rows/wayfinding-five-rows-live.html
+++ b/web/templates/dokk1/screens/wayfinding-five-rows/wayfinding-five-rows-live.html
@@ -1,5 +1,5 @@
 <!-- Wrapper start -->
-<div style="width: 1080px; height: 1920px;">
+<div style="width: 1080px; height: 1920px; background-color: black; position: relative;">
   <!-- Rows start -->
   <div style="padding-top: 80px;">
     <div style="width: 1080px; height: 160px; position: relative;">
@@ -10,16 +10,32 @@
       </div>
     </div>
     <div style="width: 1080px; height: 160px; position: relative;">
-
+      <div>
+        <img src="{{templateDirectory + '/' + options.regions[1]['arrow']}}">
+        <span>{{options.regions[1].text}}</span>
+        <img src="{{templateDirectory + '/' + options.regions[1]['icon']}}">
+      </div>
     </div>
     <div style="width: 1080px; height: 160px; position: relative;">
-
+      <div>
+        <img src="{{templateDirectory + '/' + options.regions[2]['arrow']}}">
+        <span>{{options.regions[2].text}}</span>
+        <img src="{{templateDirectory + '/' + options.regions[2]['icon']}}">
+      </div>
     </div>
     <div style="width: 1080px; height: 160px; position: relative;">
-
+      <div>
+        <img src="{{templateDirectory + '/' + options.regions[3]['arrow']}}">
+        <span>{{options.regions[3].text}}</span>
+        <img src="{{templateDirectory + '/' + options.regions[3]['icon']}}">
+      </div>
     </div>
     <div style="width: 1080px; height: 160px; position: relative;">
-      
+      <div>
+        <img src="{{templateDirectory + '/' + options.regions[4]['arrow']}}">
+        <span>{{options.regions[4].text}}</span>
+        <img src="{{templateDirectory + '/' + options.regions[4]['icon']}}">
+      </div>
     </div>
   </div>
   <!-- Rows end -->
