--- a/web/templates/dokk1/screens/wayfinding-five-rows/wayfinding-five-rows-edit.html
+++ b/web/templates/dokk1/screens/wayfinding-five-rows/wayfinding-five-rows-edit.html
@@ -3,36 +3,67 @@
     <div class="presentation--inner" style="height: 100%;">
       <div class="presentation--region-horizontal" style="width: 100%; height: 8.33%;">
         <div class="presentation--region-content" data-ng-class="{'is-active': region === 0}" data-ng-click="triggerTool({name: 'wayfinding-tool', region: 0})">
-          <!--<region-preview-widget region="0" screen="screen" class="presentation--region-content-inner"></region-preview-widget>-->
           <div>
             <span data-ng-style="{'border-bottom' : !screen.options.regions[0].subitem ? '1px solid black' : 0}">
-              <img data-ng-src="{{'/templates/dokk1/screens/tools/' + screen.options.regions[0]['arrow']}}" style="max-height: 2em;">
+              <img data-ng-src="{{'/templates/dokk1/screens/tools/' + screen.options.regions[0]['arrow']}}" style="max-height: 3em;">
             </span>
             <span style="border-bottom: 1px solid black;">
               <span>{{screen.options.regions[0].text}}</span>
-              <img data-ng-src="{{'/templates/dokk1/screens/tools/' + screen.options.regions[0]['icon']}}" style="max-height: 2em;">
+              <img data-ng-src="{{'/templates/dokk1/screens/tools/' + screen.options.regions[0]['icon']}}" style="max-height: 3em;">
             </span>
           </div>
         </div>
       </div>
       <div class="presentation--region-horizontal" style="width: 100%; height: 8.33%;">
         <div class="presentation--region-content" data-ng-class="{'is-active': region === 1}" data-ng-click="triggerTool({name: 'wayfinding-tool', region: 1})">
-          <region-preview-widget region="1" screen="screen" class="presentation--region-content-inner"></region-preview-widget>
+          <div>
+            <span data-ng-style="{'border-bottom' : !screen.options.regions[1].subitem ? '1px solid black' : 0}">
+              <img data-ng-src="{{'/templates/dokk1/screens/tools/' + screen.options.regions[1]['arrow']}}" style="max-height: 3em;">
+            </span>
+            <span style="border-bottom: 1px solid black;">
+              <span>{{screen.options.regions[1].text}}</span>
+              <img data-ng-src="{{'/templates/dokk1/screens/tools/' + screen.options.regions[1]['icon']}}" style="max-height: 3em;">
+            </span>
+          </div>
         </div>
       </div>
       <div class="presentation--region-horizontal" style="width: 100%; height: 8.33%;">
         <div class="presentation--region-content" data-ng-class="{'is-active': region === 2}" data-ng-click="triggerTool({name: 'wayfinding-tool', region: 2})">
-          <region-preview-widget region="2" screen="screen" class="presentation--region-content-inner"></region-preview-widget>
+          <div>
+            <span data-ng-style="{'border-bottom' : !screen.options.regions[2].subitem ? '1px solid black' : 0}">
+              <img data-ng-src="{{'/templates/dokk1/screens/tools/' + screen.options.regions[2]['arrow']}}" style="max-height: 3em;">
+            </span>
+            <span style="border-bottom: 1px solid black;">
+              <span>{{screen.options.regions[2].text}}</span>
+              <img data-ng-src="{{'/templates/dokk1/screens/tools/' + screen.options.regions[2]['icon']}}" style="max-height: 3em;">
+            </span>
+          </div>
         </div>
       </div>
       <div class="presentation--region-horizontal" style="width: 100%; height: 8.33%;">
         <div class="presentation--region-content" data-ng-class="{'is-active': region === 3}" data-ng-click="triggerTool({name: 'wayfinding-tool', region: 3})">
-          <region-preview-widget region="3" screen="screen" class="presentation--region-content-inner"></region-preview-widget>
+          <div>
+            <span data-ng-style="{'border-bottom' : !screen.options.regions[3].subitem ? '1px solid black' : 0}">
+              <img data-ng-src="{{'/templates/dokk1/screens/tools/' + screen.options.regions[3]['arrow']}}" style="max-height: 3em;">
+            </span>
+            <span style="border-bottom: 1px solid black;">
+              <span>{{screen.options.regions[3].text}}</span>
+              <img data-ng-src="{{'/templates/dokk1/screens/tools/' + screen.options.regions[3]['icon']}}" style="max-height: 3em;">
+            </span>
+          </div>
         </div>
       </div>
       <div class="presentation--region-horizontal" style="width: 100%; height: 8.33%;">
         <div class="presentation--region-content" data-ng-class="{'is-active': region === 4}" data-ng-click="triggerTool({name: 'wayfinding-tool', region: 4})">
-          <region-preview-widget region="4" screen="screen" class="presentation--region-content-inner"></region-preview-widget>
+          <div>
+            <span data-ng-style="{'border-bottom' : !screen.options.regions[4].subitem ? '1px solid black' : 0}">
+              <img data-ng-src="{{'/templates/dokk1/screens/tools/' + screen.options.regions[4]['arrow']}}" style="max-height: 3em;">
+            </span>
+            <span style="border-bottom: 1px solid black;">
+              <span>{{screen.options.regions[4].text}}</span>
+              <img data-ng-src="{{'/templates/dokk1/screens/tools/' + screen.options.regions[4]['icon']}}" style="max-height: 3em;">
+            </span>
+          </div>
         </div>
       </div>
       <div class="presentation--region-horizontal" style="width: 100%; height: 58.35%;">
