--- a/src/Indholdskanalen/MainBundle/Resources/views/Main/index.html.twig
+++ b/src/Indholdskanalen/MainBundle/Resources/views/Main/index.html.twig
@@ -31,10 +31,6 @@
             </div>
           {%  endif %}
         {% endfor %}
-
-        <!-- Load legacy app -->
-        <div data-ng-view="" data-ng-app="ikApp">
-        </div>
       </div>
     </div>
   </div>
@@ -66,91 +62,10 @@
     };
   </script>
 
-  {% if app.environment == 'dev' %}
-    <script src="{{ asset('assets/libs/jquery.min.js') }}"></script>
-    <script src="{{ asset('assets/libs/angular.min.js') }}"></script>
-    <script src="{{ asset('assets/libs/angular-animate.min.js') }}"></script>
-    <script src="{{ asset('assets/libs/angular-route.min.js') }}"></script>
-    <script src="{{ asset('assets/libs/moment.min.js') }}"></script>
-    <script src="{{ asset('assets/libs/moment_da_locale.js') }}"></script>
-    <script src="{{ asset('assets/libs/es5-shim.min.js') }}"></script>
-    <script src="{{ asset('assets/libs/angular-file-upload.min.js') }}"></script>
-    <script src="{{ asset('assets/libs/angular-bootstrap-colorpicker.js') }}"></script>
-    <script src="{{ asset('assets/libs/angular-placeholder.js') }}"></script>
-    <script src="{{ asset('assets/libs/datetimepicker.jquery.js') }}"></script>
-    <script src="{{ asset('assets/libs/datetimepicker.js') }}"></script>
-    <script src="{{ asset('assets/libs/locale_da.js') }}"></script>
-    <script src="{{ asset('assets/libs/stacktrace.min.js') }}"></script>
-    <script src="{{ asset('assets/libs/md5.min.js') }}"></script>
-    <script src="{{ asset('assets/libs/paging.js') }}"></script>
-  {% else %}
-    <script src="{{ asset('assets/build/assets.min.js?' ~ version) }}"></script>
-  {% endif %}
-
-    <script src="/proxy/socket.io/socket.io.js"></script>
-
-  {% if app.environment == 'dev' %}
-    <script src="{{ asset('app/app.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/routing.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/filters/activeEvents.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/services/mediaFactory.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/services/templateFactory.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/services/slideFactory.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/services/screenFactory.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/services/channelFactory.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/services/userFactory.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/services/sharedSearchFactory.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/services/sharedChannelFactory.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/services/kobaFactory.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/pages/screen/screen.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/pages/sharedChannel/sharedChannelController.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/pages/sharedChannelOverview/sharedChannelOverviewController.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/pages/adminSharing/adminSharingController.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/pages/adminTemplates/adminTemplatesController.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/pages/channel/channelController.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/pages/channelOverview/channelOverviewController.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/pages/mediaOverview/mediaOverviewController.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/pages/screenOverview/screenOverviewController.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/pages/mediaEdit/mediaEditController.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/pages/mediaUpload/mediaUploadController.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/pages/slideOverview/slideOverviewController.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/pages/slide/slideController.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/pages/slide/slideEditController.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/elements/actionsMenu/actionsMenuDirective.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/elements/actionReloadScreen/actionReloadScreenDirective.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/elements/sharedChannel/sharedChannelDirective.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/elements/sharedChannelOverview/sharedChannelOverview.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/elements/channel/channelDirectives.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/elements/channelOverview/channelOverviewDirective.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/elements/pager/pagerDirective.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/elements/delete/deleteDirective.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/elements/channelShare/channelShareDirective.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/elements/checklist/checklistDirective.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/elements/screen/screenDirective.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/elements/slideOverview/slideOverviewDirective.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/elements/slide/slideDirective.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/elements/slide/slideEditableDirective.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/elements/slide/sharedSlideDirective.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/elements/mediaOverview/mediaOverviewDirective.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/elements/mediaUpload/mediaUploadDirective.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/elements/thumb/thumbDirective.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/elements/autoGrow/autoGrowDirective.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/elements/includeReplace/includeReplaceDirective.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/elements/controlPanel/control-panel.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/elements/ngModal/ng-modal.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/widgets/screenTemplatePickerWidget/screenTemplatePickerWidget.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/widgets/textWidget/textWidget.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/widgets/textAreaWidget/textAreaWidget.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/widgets/numberWidget/numberWidget.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/widgets/channelPickerWidget/channelPickerWidget.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/widgets/sharedChannelPickerWidget/sharedChannelPickerWidget.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/widgets/channelRemoverWidget/channelRemoverWidget.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/widgets/regionPreviewWidget/regionPreviewWidget.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/components/date/dateComponent.js?' ~ version) }}"></script>
-    <script src="{{ asset('app/shared/components/digital-clock/digitalClockComponent.js?' ~ version) }}"></script>
-  {% else %}
-    <script src="{{ asset('assets/build/app.min.js?' ~ version) }}"></script>
-  {% endif %}
+  <!-- Include jquery, angular and socket.io -->
+  <script src="{{ asset('assets/libs/jquery.min.js') }}"></script>
+  <script src="{{ asset('assets/libs/angular.min.js') }}"></script>
+  <script src="/proxy/socket.io/socket.io.js"></script>
 
   <!-- Bootstrap bus only services -->
   <span id="bootstrap" style="display:none"></span>
