--- a/src/kkbding2-bundle/Resources/public/templates/ding2/slides/child-event/child-event.scss
+++ b/src/kkbding2-bundle/Resources/public/templates/ding2/slides/child-event/child-event.scss
@@ -1,163 +1,3 @@
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-main,
-nav,
-section,
-summary {
-  display: block;
-}
-audio,
-canvas,
-video {
-  display: inline-block;
-}
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
-[hidden] {
-  display: none;
-}
-html {
-  font-family: sans-serif;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-}
-body {
-  margin: 0;
-}
-a:focus {
-  outline: thin dotted;
-}
-a:active,
-a:hover {
-  outline: 0;
-}
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-abbr[title] {
-  border-bottom: 1px dotted;
-}
-b,
-hr {
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-  height: 0;
-}
-mark {
-  background: #ff0;
-  color: #000;
-}
-code,
-kbd,
-pre,
-samp {
-  font-family: monospace, serif;
-  font-size: 1em;
-}
-pre {
-  white-space: pre-wrap;
-}
-q {
-  quotes: "\201C""\201D""\2018""\2019";
-}
-small {
-  font-size: 80%;
-}
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-sup {
-  top: -0.5em;
-}
-sub {
-  bottom: -0.25em;
-}
-img {
-  border: 0;
-}
-svg:not(:root) {
-  overflow: hidden;
-}
-figure {
-  margin: 0;
-}
-fieldset {
-  border: 1px solid #c0c0c0;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em;
-}
-legend {
-  border: 0;
-  padding: 0;
-}
-button,
-input,
-select,
-textarea {
-  font-family: inherit;
-  font-size: 100%;
-  margin: 0;
-}
-button,
-input {
-  line-height: normal;
-}
-button,
-select {
-  text-transform: none;
-}
-button,
-html input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-  -webkit-appearance: button;
-  cursor: pointer;
-}
-button[disabled],
-html input[disabled] {
-  cursor: default;
-}
-input[type="checkbox"],
-input[type="radio"] {
-  box-sizing: border-box;
-  padding: 0;
-}
-input[type="search"] {
-  -webkit-appearance: textfield;
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box;
-  box-sizing: content-box;
-}
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-  border: 0;
-  padding: 0;
-}
-textarea {
-  overflow: auto;
-  vertical-align: top;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
 @font-face {
   font-family: KBH-Bold;
   src: url(../../../../fonts/KBH-Bold.ttf);
@@ -246,12 +86,12 @@ table {
   width: 100%;
 }
 .child-event-container {
-  padding: 0rem 1.75rem;
+  padding: 0rem 3%;
   background-color: #709690;
   position: relative;
 }
 .child-event-container--inner {
-  transform: translateY(-1rem);
+  transform: translateY(-3%);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -259,7 +99,7 @@ table {
 .child-event--header {
   color: #000;
   font-family: "KBH-Bold", Arial, sans-serif;
-  font-size: 325%;
+  font-size: 170%;
   text-align: left;
   line-height: 1.2;
   display: flex;
@@ -272,14 +112,15 @@ table {
 }
 .child-event-description-header {
   color: #000;
-  font-size: 100%;
+  font-size: 50%;
   line-height: 1.25;
   white-space: initial;
+  margin: 0px;
 }
 .child-event--info-wrapper {
   color: #000;
   font-family: "KBH-Bold", Arial, sans-serif;
-  font-size: 100%;
+  font-size: 50%;
   line-height: 1.25;
   display: flex;
   flex-direction: column;
@@ -309,7 +150,7 @@ table {
 }
 .child-event--footer {
   color: #000;
-  font-size: 80%;
+  font-size: 50%;
   text-align: left;
   display: flex;
   align-items: center;
