--- a/src/kkbding2-bundle/Resources/public/templates/ding2/slides/child-event/child-event.scss
+++ b/src/kkbding2-bundle/Resources/public/templates/ding2/slides/child-event/child-event.scss
@@ -86,6 +86,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  height: 100%;
 }
 .child-event--header {
   color: #000;
