--- a/src/kkbding2-bundle/Resources/public/templates/ding2/slides/child-event/child-event.scss
+++ b/src/kkbding2-bundle/Resources/public/templates/ding2/slides/child-event/child-event.scss
@@ -100,7 +100,7 @@
   white-space: pre;
 }
 .child-event-description-container {
-  margin-top: 2rem;
+  // margin-top: 2rem;
 }
 .child-event-description-header {
   color: #000;
@@ -116,19 +116,22 @@
   line-height: 1.25;
   display: flex;
   flex-direction: column;
-  margin-top: 2rem;
+  // margin-top: 2rem;
 }
 .chile-event-location {
   display: flex;
-}
-.child-event-content {
-  display: grid;
-  grid-template-columns: 4fr 1fr;
 }
 .child-event-text {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  height: 100%;
+}
+.child-event-paragraph-and-logo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 .child-event-logos {
   display: flex;
@@ -138,7 +141,10 @@
 }
 
 .child-event--footer-wrapper {
-  margin-top: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  // margin-top: 2rem;
 }
 .child-event--footer {
   color: #000;
