White space nowrap

--- a/src/kkbding2-bundle/Resources/public/templates/ding2/slides/child-event/child-event-edit.html
+++ b/src/kkbding2-bundle/Resources/public/templates/ding2/slides/child-event/child-event-edit.html
@@ -53,24 +53,9 @@
             class="has-placeholder"
             data-ng-style="{'color': ikSlide.options.headercolor}"
           >
-            <div
-              class="child-event--header"
-              data-ng-style="{'white-space': 'normal'}"
-            >
-              {{ikSlide.options.header1}}
-            </div>
-            <div
-              class="child-event--header"
-              data-ng-style="{'white-space': 'normal'}"
-            >
-              {{ikSlide.options.header2}}
-            </div>
-            <div
-              class="child-event--header"
-              data-ng-style="{'white-space': 'normal'}"
-            >
-              {{ikSlide.options.header3}}
-            </div>
+            <div class="child-event--header">{{ikSlide.options.header1}}</div>
+            <div class="child-event--header">{{ikSlide.options.header2}}</div>
+            <div class="child-event--header">{{ikSlide.options.header3}}</div>
           </div>
 
           <div class="child-event-paragraph-and-logo">
