--- a/src/kkbding2-bundle/Resources/public/templates/ding2/slides/child-event/child-event.scss
+++ b/src/kkbding2-bundle/Resources/public/templates/ding2/slides/child-event/child-event.scss
@@ -127,6 +127,9 @@
   justify-content: space-between;
   height: 100%;
 }
+.child-event--header {
+  white-space: nowrap;
+}
 .child-event-paragraph-and-logo {
   display: flex;
   justify-content: space-between;
